learning/restful/namspace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: example-namespace
  labels:
    istio-injection: enabled
